--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
         <header>
             <div class="container">
                 <nav class="nav">
-                    <a href="" ><img src="/img/Logo.png" /> </a>
+                    <a href="#" ><img src="/img/Logo.png" /> </a>
                     <div class="menu">
-                        <a href="" class="home">Home</a>
-                        <a href="" class="a">About us</a>
-                        <a href="" class="a">Services</a>
+                        <a href="#" class="home">Home</a>
+                        <a href="#" class="a">About us</a>
+                        <a href="#" class="a">Services</a>
                         <select class="Features">
                             <option>Features</option>
                             <option>Features 1</option>
                         </select>
-                        <a href="" class="a">Blog</a>
-                        <a href="" class="a">Contact</a>
+                        <a href="#" class="a">Blog</a>
+                        <a href="#" class="a">Contact</a>
                     </div>
                 </nav>
             </div>
@@ -54,4 +54,54 @@
                 </div>
             </div>
         </footer>
-    </body>
+        <section>
+            <div class="container"> 
+                <div class="info">
+                    <div class="item item_1">
+                        <img src="/img/icon_1.svg" alt="icon_1"/>
+                        <h4>Grow Your Business</h4>
+                        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                        <a href="#" class="a"><b>Read More...</b></a>
+                    </div>
+                    <div class="item item_2">
+                        <img src="/img//icon_2.svg" atl="icon_2"/>
+                        <h4>Get Quality Ieads</h4>
+                        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                        <a href="#" class="a"><b>Read More...</b></a>
+                    </div>
+                    <div class="item item_3">
+                        <img src="/img/icon_3.svg" atl="icon_3"/>
+                        <h4>Drive More Sales</h4>
+                        <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                        <a href="#" class="a"><b>Read More...</b></a>                        
+                    </div>
+                </div>
+                <div class="paragraph">
+                    <h1 class="title_2">Why You Should Choose Us.</h1>
+                    <p class="p">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+                        applications through revolutionary catalysts.</p>
+                </div>
+                <div class="reasons">
+                    <div class="reason item_1">
+                        <img src="/img/illustration_1.svg" alt="il_1"/>
+                        <h4>Keyword Research</h4>
+                        <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        <button class="more">Learn More ></button>
+                    </div>
+                    <div class="reason item_2">
+                        <img src="/img/illustration_2.svg" alt="il_2"/>
+                        <h4>Seo Optimazadion</h4>
+                        <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        <button class="more">Learn More ></button>
+                    </div>
+                    <div class="reason item_3">
+                        <img src="/img/illustration_3.svg" alt="il_3"/>
+                        <h4>Social Marketing</h4>
+                        <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                        <button class="more">Learn More ></button>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </body> 
